
In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

17th January 2019
- USER: scan zoom factor automatically set in ScanImage. But can still be over-ridden afterwards if needed. 

8th January 2019
- USER: Add ability to send Slack messages. **YOU WILL NEED TO UPDATE YOUR SYSTEM INI FILE**
- USER: Add default front/left. **YOU WILL NEED TO UPDATE YOUR SYSTEM INI FILE**
 Instructions:
 For the above, the easiest way is to move your system ini file to the back up settings dir. 
 Then run BakingTray.settings.readSystemSettings and manually add back your original settings 
 whilst editing the new values. 


29th September 2018
- Various bug fixes


5th July 2018
- Fast-Z settings in ScanImage change right away when user edits the number of planes.
- Bug fixes to box drawing routine. 
- Add a (currently hidden) option to kick the section off the block in the event of it sticking
- Bugfixes to the dummy classes so the system runs without hardware. 

15th June 2018
- No longer need to move sample away from the blade before starting the setup cuts


23rd April 2018
- Minor bugfixes relating to the bounding box drawing.
- Add methods for referencing stages
- BakingTray.utils.measureSurfaceHeight measures surface height at different locations within a single z-stack


17th April 2018
- Add class for PI C-663
- Explicitly close MaiTai shutter before turning off
- USER: hBT.getStageStatus returns info on stages
- USER: hBT.renewLaserConnection to re-connect to laser in event of a failure on startup
- BakingTray.utils.generateSupportReport for assistance in reporting errors
- MCDC cutter sends stop command when connecting
- BUGFIX: Preview image size is now calculated correctly 
- BUGFIX: setVentralMidline failure corrected for small water baths


21st November 2017